--- a/styles.css
+++ b/styles.css
@@ -1,13 +1,18 @@
-.box{
-  color: white;
-  width: 50px;
-  height: 50px;
-  background-color: blue;
-}
-
-#container{
+#container {
   display: flex;
   flex-wrap: wrap;
-  gap: 10px;
-  width: 960px; 
+  width: 960px;
+  gap: 5px; /* Adds spacing between boxes */
 }
+
+.box {
+  color: white;
+  height: 50px;
+  background-color: blue;
+  flex-basis: calc(6.25% - 5px); /* Adjust for gap */
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+}
+
